2012-08-13  Ryuan Choi  <ryuan.choi@samsung.com>

        [CMAKE][EFL] Fix build break with --tiled-backing-store
        https://bugs.webkit.org/show_bug.cgi?id=93487

        Unreviewed build fix for Efl with --tiled-backing-store.

        * CMakeLists.txt:
        Checked bison version and selected proper glslang files.

2012-08-12  Kentaro Hara  <haraken@chromium.org>

        [V8] Factor out exception related methods of V8Proxy
        https://bugs.webkit.org/show_bug.cgi?id=93792

        Reviewed by Adam Barth.

        To remove V8Proxy, this patch factors out exception related methods of V8Proxy
        to a separate file.

        (1) Move exception related methods from V8Proxy.{h,cpp} to V8ThrowException.{h,cpp}.
        (2) To avoid writing V8ThrowException::throwError() here and there in V8 binding,
        implement WebCore::throwError() in V8Binding.{h,cpp}. Ideally, we want to list up
        all V8 binding APIs in V8Binding.h.
        (3) Replace all V8Proxy::throwError() with throwError().

        Nit: I couldn't write the definition of WebCore::throwError() in V8BInding.h
        due to circular dependency issues. Either way, these methods wouldn't be
        performance-critical.

        No tests. No change in behavior.

        * UseV8.cmake:
        * WebCore.gypi:
        * bindings/scripts/CodeGeneratorV8.pm:
        (GenerateNormalAttrGetter):
        (GenerateNormalAttrSetter):
        (GenerateOverloadedFunctionCallback):
        (GenerateFunctionCallback):
        (GenerateArgumentsCountCheck):
        (GenerateParametersCheck):
        (GenerateConstructorCallback):
        (GenerateEventConstructorCallback):
        (GenerateNamedConstructorCallback):
        (GenerateFunctionCallString):
        * bindings/scripts/test/V8/V8Float64Array.cpp:
        (WebCore::Float64ArrayV8Internal::fooCallback):
        * bindings/scripts/test/V8/V8TestActiveDOMObject.cpp:
        (WebCore::TestActiveDOMObjectV8Internal::excitingFunctionCallback):